--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="col-lg-4 mb-4">
             <div class="bg-white rounded-lg shadow p-4">
               <h2 class="h5 font-weight-bold text-center mb-4">
-                Mysql , Mssql , Oracle , PostgresSql
+                Mysql , Mssql , PostgresSql
               </h2>
 
               <!-- Progress bar 1 -->
