--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-project" id="projects-section">
+    <!-- <section class="ftco-section ftco-project" id="projects-section">
       <div class="container-fluid px-md-4">
         <div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -466,7 +466,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
