close link projects

--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
             <li class="nav-item">
               <a href="#skills-section" class="nav-link"><span>Skills</span></a>
             </li>
-            <li class="nav-item">
-              <a href="#projects-section" class="nav-link"
-                ><span>Projects</span></a
-              >
-            </li>
           </ul>
         </div>
       </div>
@@ -154,6 +149,14 @@
                     </li>
                     <li class="d-flex">
                       <span>Phone: </span> <span>063-1428256</span>
+                    </li>
+                    <li class="d-flex">
+                      <span>My Web site: </span>
+                      <span
+                        ><a href="https://bit.ly/3gzgHOg"
+                          >https://bit.ly/3gzgHOg</a
+                        >
+                      </span>
                     </li>
                   </ul>
                 </div>
