--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             >
               <div
                 class="one-third order-md-last img"
-                style="background-color: #eaeded;"
+                style="background-color: #eaeded"
               >
                 <div class="overlay"></div>
                 <div class="overlay-1"></div>
@@ -107,7 +107,7 @@
               <div class="overlay"></div>
               <div
                 class="img d-flex align-self-stretch align-items-center"
-                style="background-image: url(images/profile.jpg);"
+                style="background-image: url(images/profile.jpg)"
               ></div>
             </div>
           </div>
@@ -118,7 +118,7 @@
                   <span class="subheading">My Intro</span>
                   <h2
                     class="mb-4"
-                    style="font-size: 34px; text-transform: capitalize;"
+                    style="font-size: 34px; text-transform: capitalize"
                   >
                     About Me
                   </h2>
@@ -219,7 +219,7 @@
               </h2>
 
               <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="90">
+              <!-- <div class="progress mx-auto" data-value="90">
                 <span class="progress-left">
                   <span class="progress-bar border-primary"></span>
                 </span>
@@ -233,7 +233,7 @@
                     90<sup class="small">%</sup>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- END -->
             </div>
           </div>
@@ -243,7 +243,7 @@
               <h2 class="h5 font-weight-bold text-center mb-4">Java</h2>
 
               <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="90">
+              <!-- <div class="progress mx-auto" data-value="90">
                 <span class="progress-left">
                   <span class="progress-bar border-primary"></span>
                 </span>
@@ -257,7 +257,7 @@
                     90<sup class="small">%</sup>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- END -->
             </div>
           </div>
@@ -269,7 +269,7 @@
               </h2>
 
               <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="85">
+              <!-- <div class="progress mx-auto" data-value="85">
                 <span class="progress-left">
                   <span class="progress-bar border-primary"></span>
                 </span>
@@ -283,7 +283,7 @@
                     85<sup class="small">%</sup>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- END -->
             </div>
           </div>
@@ -293,7 +293,7 @@
               <h2 class="h5 font-weight-bold text-center mb-4">Firebase</h2>
 
               <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="70">
+              <!-- <div class="progress mx-auto" data-value="70">
                 <span class="progress-left">
                   <span class="progress-bar border-primary"></span>
                 </span>
@@ -307,7 +307,7 @@
                     70<sup class="small">%</sup>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- END -->
             </div>
           </div>
@@ -317,7 +317,7 @@
               <h2 class="h5 font-weight-bold text-center mb-4">ReactJs</h2>
 
               <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="60">
+              <!-- <div class="progress mx-auto" data-value="60">
                 <span class="progress-left">
                   <span class="progress-bar border-primary"></span>
                 </span>
@@ -331,7 +331,7 @@
                     60 <sup class="small">%</sup>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- END -->
             </div>
           </div>
@@ -341,7 +341,7 @@
               <h2 class="h5 font-weight-bold text-center mb-4">Angular</h2>
 
               <!-- Progress bar 1 -->
-              <div class="progress mx-auto" data-value="50">
+              <!-- <div class="progress mx-auto" data-value="50">
                 <span class="progress-left">
                   <span class="progress-bar border-primary"></span>
                 </span>
@@ -354,8 +354,8 @@
                   <div class="h2 font-weight-bold">
                     50<sup class="small">%</sup>
                   </div>
-                </div>
-              </div>
+                </div> 
+              </div>-->
               <!-- END -->
             </div>
           </div>
