--- a/index.html
+++ b/index.html
@@ -123,10 +123,9 @@
                     About Me
                   </h2>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia. It is a paradisematic
-                    country, in which roasted parts of sentences fly into your
-                    mouth.
+                    I am looking for work on the front and back web site
+                    development. I like to study about New technology and
+                    continuous self-development
                   </p>
 
                   <ul class="about-info mt-4 px-md-0 px-2">
