change image profile

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="overlay"></div>
               <div
                 class="img d-flex align-self-stretch align-items-center"
-                style="background-image: url(images/profile.jpg)"
+                style="background-image: url(images/S__42000386.jpg)"
               ></div>
             </div>
           </div>
