--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
 
-    <link href="/assets/css//bootstrap.min.css" rel="stylesheet" />
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
 
-    <link href="/assets/css//style.css" rel="stylesheet" />
+    <link href="/assets/css/style.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
