--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Online CV - Professional HTML CSS Resume Website Template</title>
+    <title>thanakarn website</title>
 
     <link href="favicon.png" rel="icon" />
 
@@ -14,11 +14,11 @@
       rel="stylesheet"
     />
 
-    <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
 
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 
-    <link href="/assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -310,11 +310,11 @@
     </div>
 
     <script
-      src="/assets/js/jquery-2.1.4.min.js"
+      src="assets/js/jquery-2.1.4.min.js"
       type="text/javascript"
     ></script>
 
-    <script src="/assets/js//bootstrap.min.js" type="text/javascript"></script>
-    <script src="/assets/js//scripts.js" type="text/javascript"></script>
+    <script src="assets/js//bootstrap.min.js" type="text/javascript"></script>
+    <script src="assets/js//scripts.js" type="text/javascript"></script>
   </body>
 </html>
